# cc-turntable

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mise.toml
ccturn/: Cargo.toml
ccturn/src/: lib.rs  locator.rs  main.rs  report.rs
ccturn/src/extract/: errors.rs  interventions.rs  mod.rs  skills.rs  subagents.rs  tools.rs
ccturn/src/format/: human.rs  json.rs  list_human.rs  list_json.rs  mod.rs
ccturn/src/list/: metadata.rs  mod.rs  projects.rs  sessions.rs
ccturn/src/parser/: record.rs
ccturn/tests/: cli_surface.rs  integration.rs  list_format.rs  list_projects.rs  list_sessions.rs
ccturn/tests/fixtures/: empty-sections.jsonl  errors-by-category.jsonl  errors-edge-cases.jsonl  file-history-first-record.jsonl  full-session.jsonl  integration-expected-human.txt  interventions-user-mid-stream.jsonl  skill-invocation.jsonl  skill-launching-exclusion.jsonl  skill-window-closes-mid-stream.jsonl  subagent-invocation.jsonl  tools-mix.jsonl
ccturn/tests/fixtures/full-session-subagents/: agent-report-agent-1.jsonl  agent-report-agent-1.meta.json
ccturn/tests/fixtures/parser/: malformed-line-middle.jsonl  multi-record-valid.jsonl
ccturn/tests/fixtures/projects/-tmp-multi-session/: aaaaaaaa-1111-1111-1111-111111111111.jsonl  bbbbbbbb-2222-2222-2222-222222222222.jsonl  cccccccc-3333-3333-3333-333333333333.jsonl  dddddddd-4444-4444-4444-444444444444.jsonl  eeeeeeee-5555-5555-5555-555555555555.jsonl
ccturn/tests/fixtures/projects/-tmp-test-project/: integration-session.jsonl
(+7 files in other folders)
